--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,13 @@
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.12.1' // match your Gradle version
+    }
+}
+
 plugins {
     id 'com.android.library'
     id 'de.undercouch.download' version '5.1.1'
