--- a/jitpack.yml
+++ b/jitpack.yml
@@ -4,6 +4,6 @@ jdk:
 gradle:
   wrapper: true
 
-build:
-  commands:
-    - gradle assembleRelease -Pversion=5.0.0-rc.13 -PaarUrl=https://github.com/Akylas/mobile-sdk/releases/download/v5.0.0-rc.13/carto-mobile-sdk-android-5.0.0-rc.13.aar
+env:
+   VERSION: "5.0.0-rc.13"
+   AAR_URL: "https://github.com/Akylas/mobile-sdk/releases/download/v5.0.0-rc.13/carto-mobile-sdk-android-5.0.0-rc.13.aar"
