--- a/build.gradle
+++ b/build.gradle
@@ -5,5 +5,6 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.12.1' // match your Gradle version
+        classpath 'com.android.fused-library:com.android.fused-library.gradle.plugin:8.13.0' // match your Gradle version
     }
 }
