--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,58 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.12.1' // match your Gradle version
-        classpath 'com.android.fused-library:com.android.fused-library.gradle.plugin:8.13.0' // match your Gradle version
+        // classpath 'com.android.fused-library:com.android.fused-library.gradle.plugin:8.13.0' // match your Gradle version
+    }
+}
+
+plugins {
+    id 'de.undercouch.download' version '5.1.1'
+    id 'maven-publish'
+    // id 'com.android.library'
+}
+
+// Pass GitHub release URL and version as properties
+def libVersion = project.findProperty("version") ?: System.getenv("VERSION") ?: ""
+def aarUrl = project.findProperty("aarUrl") ?: System.getenv("AAR_URL") ?: ""
+
+if (!aarUrl) {
+    throw new GradleException("You must provide -PaarUrl=<url-to-aar>")
+}
+if (!libVersion) {
+    throw new GradleException("You must provide -Pversion=<version>")
+}
+def downloadedAar = layout.buildDirectory.file("downloads/external-lib.aar")
+
+
+// android {
+//     compileSdk 34
+//     namespace 'com.carto'
+//     defaultConfig {
+//         minSdk 21
+
+//     }
+// }
+
+tasks.register('downloadAar', de.undercouch.gradle.tasks.download.Download) {
+    src aarUrl
+    dest downloadedAar
+    onlyIfModified true
+}
+publishing {
+   
+    publications {
+        release(MavenPublication) {
+            groupId = 'com.carto'
+            artifactId = 'carto-mobile-sdk'
+            version = libVersion
+
+            // define artifact file
+            // afterEvaluate {
+            //     from components.fusedLibraryComponent
+            // }
+            artifact(downloadedAar) {
+                builtBy(tasks.named("downloadAar"))
+            }
+        }
     }
 }
