--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,5 @@
 // include(":library", ":aar-wrapper")
-include(":library")
+// include(":library")
 
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
