testing jitpack release

--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,10 @@ tasks.register("prepareAar") {
         }
     }
 }
+
+tasks.named("publish") {
+    dependsOn("prepareAar")
+}
 publishing {
    
     publications {
