--- a/build.gradle
+++ b/build.gradle
@@ -60,8 +60,8 @@ publishing {
             artifactId = 'carto-mobile-sdk'
             version = libVersion
 
-            artifact(outputAar) {
-                builtBy(tasks.named("prepareAar"))
+            artifact(downloadedAar) {
+                builtBy(tasks.named("downloadAar"))
             }
         }
     }
