--- a/jitpack.yml
+++ b/jitpack.yml
@@ -6,6 +6,7 @@ gradle:
 
 install:
   - ./gradlew publish
+  - mvn install:install-file -Dfile=build/output/carto-mobile-sdk-android-5.0.0-rc.13.aar -DgroupId=com.carto -DartifactId=carto-mobile-sdk -Dversion=5.0.0-rc.13 -Dpackaging=aar
 
 env:
    VERSION: "5.0.0-rc.13"
