--- a/build.gradle
+++ b/build.gradle
@@ -27,13 +27,13 @@ def downloadedAar = layout.buildDirectory.file("downloads/external-lib.aar")
 def outputAarName = "carto-mobile-sdk-android-${libVersion}.aar"
 def outputAar = layout.buildDirectory.file("output/aar/$outputAarName")
 
-tasks.register('downloadAar', de.undercouch.gradle.tasks.download.Download) {
+tasks.register('downloadExternalAar', de.undercouch.gradle.tasks.download.Download) {
     src aarUrl
     dest downloadedAar
     onlyIfModified true
 }
 tasks.register("prepareAar") {
-    dependsOn("downloadAar")
+    dependsOn("downloadExternalAar")
     doLast {
         copy {
             from(downloadedAar.get().asFile)
@@ -49,6 +49,14 @@ tasks.register("prepareAar") {
     }
 }
 
+tasks.register("prepareArtifact") {
+    dependsOn("downloadExternalAar")
+    doLast {
+        // Optionally copy to build/libs if you want
+        println "Downloaded AAR: ${downloadedAar.get().asFile}, size: ${downloadedAar.get().asFile.length()} bytes"
+    }
+}
+
 tasks.named("publish") {
     dependsOn("prepareAar")
 }
@@ -60,9 +68,16 @@ publishing {
             artifactId = 'carto-mobile-sdk'
             version = libVersion
 
-            artifact(outputAar) {
-                builtBy(tasks.named("prepareAar"))
+            artifact(downloadedAar) {
+                builtBy(tasks.named("prepareArtifact"))
             }
+        }
+    }
+
+    repositories {
+        maven {
+            // This points to the Maven local repository that JitPack reads
+            url = uri(System.getProperty("user.home") + "/.m2/repository")
         }
     }
 }
