testing jitpack release

--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,8 @@ publishing {
 
             artifact(downloadedAar) {
                 builtBy(tasks.named("prepareArtifact"))
+                extension = 'aar'
+                type = 'aar'   // Optional, Gradle uses it internally; POM will not break
             }
         }
     }
