--- a/build.gradle
+++ b/build.gradle
@@ -31,15 +31,19 @@ tasks.register('downloadExternalAar', de.undercouch.gradle.tasks.download.Downlo
     src aarUrl
     dest downloadedAar
     onlyIfModified true
-}
-
-tasks.register("prepareArtifact") {
-    dependsOn("downloadExternalAar")
     doLast {
         // Optionally copy to build/libs if you want
         println "Downloaded AAR: ${downloadedAar.get().asFile}, size: ${downloadedAar.get().asFile.length()} bytes"
     }
 }
+
+// tasks.register("prepareArtifact") {
+//     dependsOn("downloadExternalAar")
+//     doLast {
+//         // Optionally copy to build/libs if you want
+//         println "Downloaded AAR: ${downloadedAar.get().asFile}, size: ${downloadedAar.get().asFile.length()} bytes"
+//     }
+// }
 
 publishing {
    
@@ -50,7 +54,7 @@ publishing {
             version = libVersion
 
             artifact(downloadedAar) {
-                builtBy(tasks.named("prepareArtifact"))
+                builtBy(tasks.named("downloadExternalAar"))
                 extension = 'aar'
             }
         }
